@@ -1,5 +1,7 @@
 This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.
 
+- #105 Update component to make use of namespace-based routing instead of modAction
+
 ++++++++++++++++++++++++++++++++
 ++   VersionX 2.1.3-pl        ++
 ++   Released on 2015-10-25   ++
